@@ -1,3 +1,6 @@
+2002-xx-xx v0.x:
+  * Print error message rather than segv on flush without specifying a group first. (Reported by Christian Marillat)
+
 2002-06-17 v0.19:
   * Fix handling of timeout where the server prints an error before disconnecting. (Reported by Scott Kay)
   * Fix specifying some default arguments twice. (Fixes gcc 3.1 compile)
